# py-snaptests

./: README.md  pyproject.toml  setup.py
snaptest/: pytest.py
