[tool.poetry]
name = "snaptest"
version = "0.2"
description = ""
authors = ["Michael Elsdörfer <michael@elsdoerfer.info>"]
packages = [{ include = "snaptest" }]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
